se cambio la clase menuItems de la etiqueta ul al div que la contiene.Ademàs se puso con mayùscula el logo  del sitio

--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,16 @@
    letter-spacing: 1px;
 }
 .menuItems{
-     font-family: 'Signika', sans-serif;
-      font-weight: lighter;
+    font-family: 'Signika', sans-serif;
+    font-weight: lighter;
+     letter-spacing: 1px;
 }
   main{
   padding-top: 126px;
 }
 
-
+text{
+     letter-spacing: 1px;
+         font-family: 'Signika', sans-serif;
+    font-weight: lighter;
+}
