--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,29 @@
   main{
   padding-top: 126px;
 }
-
-text{
-     letter-spacing: 1px;
-         font-family: 'Signika', sans-serif;
-    font-weight: lighter;
+.imagen-avatar{
+    background-image: url(https://p4.wallpaperbetter.com/wallpaper/970/460/972/avatar-2-2015-avatar-2-pandora-poster-wallpaper-preview.jpg);
+    width: 100%;
+    height: 500px;
 }
+
+
+/*         background: linear-gradient(90deg, #141619 0%, #212529 27%, #141619 63%);
+ */
+/* inicio de media query del footer */
+ @media all and (max-width: 993px) {
+.bg-new{
+    background: radial-gradient(circle, rgba(5,5,112,1) 7%, rgba(3,3,40,1) 96%);
+}
+.backgroundIndex{
+    background-image: url(https://p4.wallpaperbetter.com/wallpaper/970/460/972/avatar-2-2015-avatar-2-pandora-poster-wallpaper-preview.jpg);
+}
+/* .buttons-container{
+
+display: flex;
+} 
+
+.button-child{
+    flex-direction: column;
+} */
+} 
