se modifico el background del footer

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@
 /*inicio del css del footer */
 
 .bg-new-foorter{
-    background: linear-gradient(90deg, #141619 0%, #212529 27%, #141619 63%)
+  background: linear-gradient(90deg, #161718 3%, #1f2328 24%, #050b18 73%);
 }
+
 .logo_footer{
   filter:drop-shadow(23px 23px
         48px #0d6efd);
@@ -65,6 +66,39 @@ filter: contrast(102%);
     background-image: url(https://p4.wallpaperbetter.com/wallpaper/970/460/972/avatar-2-2015-avatar-2-pandora-poster-wallpaper-preview.jpg);
 }
 
+} 
 
+/* inicio de media query del footer */
+ @media all and (min-width:50px) and (max-width: 576px) {
+ .box-footer{
+  width: auto;
+  margin: auto;
+  text-align: center;
+ }
+ .display-flex{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+ }
+
+.justify-icon-footer{
+  justify-content: space-around;
+
+ } 
  
 } 
+
+
+ @media all and (min-width:375px) and (max-width: 765px) {
+  .padding-icons{ padding: 1em; 
+  }
+}
+
+/*
+diseño 1
+background: linear-gradient(90deg, #141619 0%, #1b1f22 27%, #0a1424 63%);
+diseño  2
+ackground: linear-gradient(90deg, #161718 3%, #1f2328 24%, #050b18 73%);
+}
+
+*/
