Se agrego la carpeta img con el favicon de la pàgina, se le dio un color oscuro con opacidad al navbar y se agrego el favicon como parte del logo de la pàgina

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@
    font-size: -webkit-xxx-large;
    letter-spacing: 1px;
 }
+.width-logo-img{
+    width: 10%;
+}
 .menuItems{
     font-family: 'Signika', sans-serif;
     font-weight: lighter;
