--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,47 @@
   color: #0f0288;
   scale: 1.1;
 }
+/*inicio del css de el archivo nosotros */
+.backgroundNosotros{
+  background: radial-gradient(circle, rgba(5,5,112,1) 7%, rgba(3,3,40,1) 96%);
+  font-family: 'Signika', sans-serif;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
+
+/* css de la pagina acerca de nosotros */
+
+.letter-first::first-letter {
+  font-size: 280%;
+  font-style: italic;
+  background-color: rgba(193, 202, 209, 0.882);
+  color: #3809f3;
+  letter-spacing: 3px;
+  margin-left: 20px;
+}
+
+.space-letter::first-letter{
+   font-size: 200%;
+  margin-left: 20px;
+}
+.letter-first::first-line{
+   text-transform: uppercase;
+}
+/* css de las imagenes  del equipo seccion nosotros*/
+
+.card-wrapper:hover .imagen-filter {
+  filter: contrast(100%);
+  scale: 1.1;
+}
+.contenedor-img{
+   overflow: hidden;
+}
+.imagen-filter{
+  transition: all 0.5s;
+  filter: brightness(38%);
+}
+
+
 /*inicio del css del footer */
 
 .bg-new-foorter{
