--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,17 @@
   background: radial-gradient(circle, rgba(5,5,112,1) 7%, rgba(3,3,40,1) 96%);
 
 }
+/* #navbarError404:hover{
+} */
 #paginaError{
   height: 625px;
   position: relative;
 }
+#paginaError:hover{
+filter: contrast(4.5);
+}
+  
+
 .letter-size{
   font-size: calc(1.625rem + 4.5vw);
   font-family: 'Signika', sans-serif;
