se agregaron 2 imagenes en la carpeta img, dentro de la carpeta nosotros y se agrego la ruta de estas imagenes a las card que les correspondian

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,9 @@
 .width-img-yuli{
   width: 67%;
 }
+.width-img-paul{
+  width: 70%;
+}
 .img-wrapper-equipo:hover .imagen-filter{
   filter: contrast(100%);
 }
