se modifico el background del navbar

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@
     height: 500px;
 }
 /*inicio del css de contacto */
+#bg-contacto-navbar{
+      background: radial-gradient(circle, rgba(5,5,112,1) 7%, rgba(3,3,40,1) 96%);
+
+}
   .backgroundContacto{
     background-image: url(https://p4.wallpaperbetter.com/wallpaper/315/481/104/avatar-2-wallpaper-preview.jpg);
     background-repeat: no-repeat;
