--- a/css/style.css
+++ b/css/style.css
@@ -81,82 +81,69 @@ main {
   }
 }
 
-
-
-
 @media all and (max-width: 576px) {
-
-  .summary{
-    display: none!important;
+  .summary {
+    display: none !important;
   }
-  .buttonsSmall{
-    display:block!important;
+  .buttonsSmall {
+    display: block !important;
   }
-  .buttons{
-    display:none!important;
+  .buttons {
+    display: none !important;
   }
-  
 }
-
-
 
 @media all and (max-width: 992px) {
-
   .title {
-    display: none!important;
+    display: none !important;
   }
-  .subtitle{
-  display:block!important;
-}
+  .subtitle {
+    display: block !important;
+  }
 
-.summary{
-  font-size: small;
-  width:75%!important;
-}
+  .summary {
+    font-size: small;
+    width: 75% !important;
+  }
 
-.controles {
-  height: 100%!important;
-  object-fit: cover;
-}
+  .controles {
+    height: 100% !important;
+    object-fit: cover;
+  }
 
+  .movieTitle {
+    position: absolute;
+    top: 50% !important;
+    left: 10%;
+  }
+  .movie {
+    object-fit: contain !important;
+    height: 10% !important;
+    width: 45% !important;
+  }
 
+  .card-img-top {
+    height: auto !important;
+  }
 
-.movieTitle {
-  position: absolute;
-  top: 50%!important;
-  left: 10%;
-}
-.movie {
-  object-fit: contain!important;
-  height: 10%!important;
-  width: 45%!important;
-}
+  .movieHidden {
+    display: none !important;
+  }
 
-.card-img-top {
-  height: auto!important;
-}
+  .arrow {
+    margin: 0 !important;
+    height: auto !important;
+  }
 
-.movieHidden{
-  display:none!important;
+  .contenedor {
+    width: 100% !important;
+  }
 }
-
-.arrow{
-  margin: 0!important;
-  height: auto!important;
-}
-
-.contenedor {
-  width: 100%!important;
-}
-}
-
 
 @media all and (min-width: 375px) and (max-width: 765px) {
   .padding-icons {
     padding: 1em;
   }
-
-
 }
 
 .movie {
@@ -179,7 +166,7 @@ main {
 .summary {
   text-align: left;
   width: 50%;
-  font-size:medium!important;
+  font-size: large !important;
 }
 
 .movieTitle {
@@ -187,31 +174,31 @@ main {
   top: 10%;
   left: 10%;
 }
-.movieHidden{
-  display:block;
+.movieHidden {
+  display: block;
 }
 
 .title {
   scale: 1;
 }
 .subtitle {
-  display:none;
-  text-align: left;;
+  display: none;
+  text-align: left;
 }
 .buttons {
   display: flex;
   flex-direction: row;
   justify-content: start;
 }
-.buttonsSmall{
-  display:none;
+.buttonsSmall {
+  display: none;
 }
 .mainImage {
   position: relative;
   display: inline-block;
   text-align: center;
   width: 100%;
-  height : 100%;
+  height: 100%;
 }
 
 .contenedor {
@@ -237,6 +224,26 @@ main {
 
 .card-img-top {
   height: 175px;
+}
+
+.icons {
+  text-align: left;
+  font-size: large;
+}
+
+table {
+  width: 50%;
+  text-align: left;
+  font-size: large;
+}
+th {
+  text-align: left;
+  font-size: large;
+  width: 15%;
+}
+
+.brillo{
+  filter: brightness(30%);
 }
 /*
 diseño 1
